<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/baseLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical"
	    android:background="#ffe5e5e5">
	    
	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:layout_gravity="center_horizontal"
	        android:layout_marginBottom="20dp"
	        android:layout_marginTop="20dp"
	        android:layout_weight="1.5"
	        android:orientation="vertical" >
	
	        <ImageView
	            android:id="@+id/imageView_photo"
	            android:layout_width="160dp"
	            android:layout_height= "160dp"
	            android:scaleType="fitXY"
	            android:src="@drawable/default_photo" />
	        
	        <View
	            android:id="@+id/view_shadow"
	            android:layout_width="match_parent"
	            android:layout_height="8dp"
	            android:layout_below="@+id/buildingsList"
	            android:background="@drawable/shape_drop_shadow"
	            android:visibility="invisible"/>
	        
	        <TextView
	            android:id="@+id/textView_photoTip"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_horizontal|bottom"
	            android:layout_marginTop="2dp"
	            android:text="@string/register_textViewContent_photoTip"
	            android:textAppearance="?android:attr/textAppearanceSmall" />
	        
	    </LinearLayout>

	    <requestFocus android:layout_weight="1.5" />
	        
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:background="#ffb2b2b2">
	
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dp"
	            android:layout_marginRight="10dp"
	            android:layout_marginTop="10dp"
	            android:layout_weight="0" >
	
	            <TextView
	                android:id="@+id/textView_name"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginRight="5dp"
	                android:text="@string/register_textViewContent_name"
	                android:textAppearance="?android:attr/textAppearanceLarge" />
	
	            <EditText
	                android:id="@+id/editText_name"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:ems="10"
	                android:inputType="textPersonName"
	                android:text=""
	                android:maxLines="1" />
	        </LinearLayout>
	
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginBottom="10dp"
	            android:layout_marginLeft="10dp"
	            android:layout_marginRight="10dp"
	            android:layout_marginTop="5dp" >
	
	            <TextView
	                android:id="@+id/textView_phone"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginRight="5dp"
	                android:text="@string/register_textViewContent_phone"
	                android:textAppearance="?android:attr/textAppearanceLarge" />
	
	            <EditText
	                android:id="@+id/editText_phone"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:ems="10"
	                android:inputType="phone"
	                android:text=""
	                android:maxLines="1" />
	        </LinearLayout>
	    </LinearLayout>
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" >
	
	        <Button
	            android:id="@+id/button_request"
	            android:layout_width="200dp"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_horizontal"
	            android:layout_marginBottom="15dp"
	            android:layout_marginTop="15dp"
	            android:text="@string/register_buttonContent_request" />
	    </LinearLayout>
	
	</LinearLayout>

</FrameLayout>